--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-20 15:10+0200\n"
-"PO-Revision-Date: 2010-07-21 06:32+0200\n"
+"PO-Revision-Date: 2010-07-21 06:36+0200\n"
 "Last-Translator:  <ablat7ihlim@yahoo.com.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -1551,7 +1551,7 @@ msgstr ""
 
 #: libraries/blobstreaming.lib.php:693
 msgid "Play audio"
-msgstr ""
+msgstr "ئاۋاز قۇيۇش"
 
 #: libraries/blobstreaming.lib.php:698
 msgid "View video"
