Translation update done using Pootle.

--- a/po/ug.po
+++ b/po/ug.po
@@ -1555,7 +1555,7 @@ msgstr "ئاۋاز قۇيۇش"
 
 #: libraries/blobstreaming.lib.php:698
 msgid "View video"
-msgstr ""
+msgstr "سىن قۇيۇش"
 
 #: libraries/blobstreaming.lib.php:702
 msgid "Download file"
