--- a/ChangeLog
+++ b/ChangeLog
@@ -91,6 +91,8 @@ $Id$
 + [core] Dropped AllowAnywhereRecoding configuration variable.
 - rfe #3016457 [interface] Define tab order in SQL form to allow easier tab
   navigation.
++ [code] Centralized format string expansion, @VARIABLES@ are recommended way
+  now.
 
 3.3.6.0 (not yet released)
 - bug #3031705 [core] Do not use CONCAT for DECIMAL fields.
