Czech translation update.

--- a/po/cs.po
+++ b/po/cs.po
@@ -6,7 +6,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-21 10:29+0200\n"
-"PO-Revision-Date: 2010-07-21 08:59+0200\n"
+"PO-Revision-Date: 2010-07-21 10:31+0200\n"
 "Last-Translator: Michal <michal@cihar.com>\n"
 "Language-Team: czech <cs@li.org>\n"
 "Language: cs\n"
@@ -2739,20 +2739,18 @@ msgid "Table structure for table"
 msgstr "Struktura tabulky"
 
 #: libraries/export/latex.php:13
-#, fuzzy
 #| msgid "Content of table __TABLE__"
 msgid "Content of table @TABLE@"
-msgstr "Obsah tabulky __TABLE__"
+msgstr "Obsah tabulky @TABLE@"
 
 #: libraries/export/latex.php:14
 msgid "(continued)"
 msgstr "(pokračování)"
 
 #: libraries/export/latex.php:15
-#, fuzzy
 #| msgid "Structure of table __TABLE__"
 msgid "Structure of table @TABLE@"
-msgstr "Struktura tabulky __TABLE__"
+msgstr "Struktura tabulky @TABLE@"
 
 #: libraries/export/latex.php:26
 msgid "LaTeX"
