[interface] Better formatting for SQL validator results.

--- a/ChangeLog
+++ b/ChangeLog
@@ -94,6 +94,7 @@ $Id$
 + [code] Centralized format string expansion, @VARIABLES@ are recommended way
   now.
 + [validator] SQL validator works also with SOAP PHP extension.
+- [interface] Better formatting for SQL validator results.
 
 3.3.6.0 (not yet released)
 - bug #3031705 [core] Do not use CONCAT for DECIMAL fields.
