--- a/po/fr.po
+++ b/po/fr.po
@@ -1835,7 +1835,7 @@ msgstr "Opérations"
 #: libraries/core.lib.php:282 libraries/dbg/setup.php:21
 #, php-format
 msgid "The %s extension is missing. Please check your PHP configuration."
-msgstr ""
+msgstr "Il manque l'extension %s. Veuillez vérifier votre configuration PHP."
 
 #: libraries/db_events.inc.php:19 libraries/db_events.inc.php:21
 #: libraries/export/sql.php:412
