--- a/po/fr.po
+++ b/po/fr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-21 10:29+0200\n"
-"PO-Revision-Date: 2010-07-21 14:40+0200\n"
+"PO-Revision-Date: 2010-07-21 14:41+0200\n"
 "Last-Translator: Marc Delisle <marc@infomarc.info>\n"
 "Language-Team: french <fr@li.org>\n"
 "Language: fr\n"
@@ -2763,10 +2763,9 @@ msgid "Table structure for table"
 msgstr "Structure de la table"
 
 #: libraries/export/latex.php:13
-#, fuzzy
 #| msgid "Content of table __TABLE__"
 msgid "Content of table @TABLE@"
-msgstr "Contenu de la table __TABLE__"
+msgstr "Contenu de la table @TABLE@"
 
 #: libraries/export/latex.php:14
 msgid "(continued)"
