Translation update done using Pootle.

--- a/po/fr.po
+++ b/po/fr.po
@@ -2772,10 +2772,9 @@ msgid "(continued)"
 msgstr "(suite)"
 
 #: libraries/export/latex.php:15
-#, fuzzy
 #| msgid "Structure of table __TABLE__"
 msgid "Structure of table @TABLE@"
-msgstr "Structure de la table __TABLE__"
+msgstr "Structure de la table @TABLE@"
 
 #: libraries/export/latex.php:26
 msgid "LaTeX"
