--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -2727,10 +2727,9 @@ msgid "Table structure for table"
 msgstr "Table structure for table"
 
 #: libraries/export/latex.php:13
-#, fuzzy
 #| msgid "Content of table __TABLE__"
 msgid "Content of table @TABLE@"
-msgstr "Content of table __TABLE__"
+msgstr "Content of table @TABLE@"
 
 #: libraries/export/latex.php:14
 msgid "(continued)"
