--- a/po/de.po
+++ b/po/de.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-21 10:29+0200\n"
-"PO-Revision-Date: 2010-07-21 14:44+0200\n"
+"PO-Revision-Date: 2010-07-21 14:45+0200\n"
 "Last-Translator: Marc Delisle <marc@infomarc.info>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
@@ -2788,10 +2788,9 @@ msgid "(continued)"
 msgstr "(Fortsetzung)"
 
 #: libraries/export/latex.php:15
-#, fuzzy
 #| msgid "Structure of table __TABLE__"
 msgid "Structure of table @TABLE@"
-msgstr "Struktur der Tabelle __TABLE__"
+msgstr "Struktur der Tabelle @TABLE@"
 
 #: libraries/export/latex.php:26
 msgid "LaTeX"
