Translation update done using Pootle.

--- a/po/sv.po
+++ b/po/sv.po
@@ -4,14 +4,15 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-21 10:29+0200\n"
-"PO-Revision-Date: 2010-03-12 09:19+0100\n"
-"Last-Translator: Automatically generated\n"
+"PO-Revision-Date: 2010-07-21 14:48+0200\n"
+"Last-Translator: Marc Delisle <marc@infomarc.info>\n"
 "Language-Team: swedish <sv@li.org>\n"
-"Language: \n"
+"Language: sv\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Translate Toolkit 1.5.3\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Pootle 2.0.1\n"
 
 #: browse_foreigners.php:37 browse_foreigners.php:58
 #: libraries/display_tbl.lib.php:416 server_privileges.php:1506
@@ -2835,10 +2836,9 @@ msgid "Table structure for table"
 msgstr "Struktur för tabell"
 
 #: libraries/export/latex.php:13
-#, fuzzy
 #| msgid "Content of table __TABLE__"
 msgid "Content of table @TABLE@"
-msgstr "Innehåll i tabell __TABLE__"
+msgstr "Innehåll i tabell @TABLE@"
 
 #: libraries/export/latex.php:14
 msgid "(continued)"
@@ -8602,331 +8602,3 @@ msgstr "Döp om tabellen till"
 
 #~ msgid "Default character set"
 #~ msgstr "Standard teckenuppsättning"
-
-#, fuzzy
-#~| msgid "Add new field"
-#~ msgid "Add field"
-#~ msgstr "Lägg till fält"
-
-#~ msgid "Field"
-#~ msgstr "Fält"
-
-#~ msgid "Records"
-#~ msgstr "Rader"
-
-#~ msgid "Fields terminated by"
-#~ msgstr "Fälten avslutas med"
-
-#~ msgid "Fields"
-#~ msgstr "Fält"
-
-#~ msgid "Field %s has been dropped"
-#~ msgstr "Fältet %s har tagits bort"
-
-#~ msgid "See image/jpeg: inline"
-#~ msgstr "Se image/jpeg: inline"
-
-#, fuzzy
-#~| msgid "\"zipped\""
-#~ msgid "zipped"
-#~ msgstr "\"zippad\""
-
-#, fuzzy
-#~| msgid "\"gzipped\""
-#~ msgid "gzipped"
-#~ msgstr "\"gzippad\""
-
-#, fuzzy
-#~| msgid "\"bzipped\""
-#~ msgid "bzipped"
-#~ msgstr "\"bzippad\""
-
-#, fuzzy
-#~| msgid "Add custom comment into header (\\n splits lines)"
-#~ msgid ""
-#~ "Add custom comment into header (\n"
-#~ " splits lines)"
-#~ msgstr "Lägg till egen kommentar i huvud (\\n delar rader)"
-
-#~ msgid "and"
-#~ msgstr "och"
-
-#, fuzzy
-#~ msgctxt "$strBLOBRepositoryDisabled"
-#~ msgid "Disabled"
-#~ msgstr "Inaktiverad"
-
-#, fuzzy
-#~ msgctxt "$strBLOBRepositoryEnabled"
-#~ msgid "Enabled"
-#~ msgstr "Aktiverad"
-
-#, fuzzy
-#~ msgctxt "$strBLOBRepositoryRepair"
-#~ msgid "Repair"
-#~ msgstr "Reparera"
-
-#~ msgid "Calendar"
-#~ msgstr "Kalender"
-
-#~ msgid "MySQL&nbsp;4.0 compatible"
-#~ msgstr "Kompatibel med MySQL&nbsp;4.0"
-
-#~ msgid "Could not load default configuration from: \"%1$s\""
-#~ msgstr "Kunde inte ladda standardkonfiguration från: \"%1$s\""
-
-#~ msgid "Create an index on&nbsp;%s&nbsp;columns"
-#~ msgstr "Skapa ett index för&nbsp;%s&nbsp;kolumn(er)"
-
-#, fuzzy
-#~ msgctxt "$strCreateTableShort"
-#~ msgid "Create table"
-#~ msgstr "Skapa tabell"
-
-#, fuzzy
-#~ msgctxt "$strCreateUserDatabaseNone"
-#~ msgid "None"
-#~ msgstr "Inget"
-
-#~ msgid "Flush the table (\"FLUSH\")"
-#~ msgstr "Rensa tabell"
-
-#~ msgid "Invalid server index: \"%s\""
-#~ msgstr "Ogiltigt serverindex: \"%s\""
-
-#~ msgctxt "$strMIME_description"
-#~ msgid "Description"
-#~ msgstr "Beskrivning"
-
-#~ msgctxt "$strNoneDefault"
-#~ msgid "None"
-#~ msgstr "Inga"
-
-#~ msgid "Schema of the \"%s\" database - Page %s"
-#~ msgstr "Schema för databasen \"%s\" - Sidan %s"
-
-#~ msgid "The \"%s\" table doesn't exist!"
-#~ msgstr "Tabellen \"%s\" finns inte!"
-
-#~ msgid ""
-#~ "This MySQL server works as %s in <b>replication</b> process. For further "
-#~ "information about replication status on the server, please visit the <a "
-#~ "href=\"#replication\">replication section</a>."
-#~ msgstr ""
-#~ "Denna MySQL-server arbetar som %s i <b>replikerings</b>-läge. För mer "
-#~ "information om replikeringsstatus på servern, gå till <a href="
-#~ "\"#replication\">replikeringssektionen</a>."
-
-#~ msgid "running on %s"
-#~ msgstr "körs på %s"
-
-#~ msgid "The scale factor is too small to fit the schema on one page"
-#~ msgstr "Skalfaktorn är för liten för att schemat ska få plats på en sida"
-
-#~ msgid ""
-#~ "Cannot start session without errors, please check errors given in your "
-#~ "PHP and/or webserver log file and configure your PHP installation "
-#~ "properly."
-#~ msgstr ""
-#~ "Kan inte starta session utan fel. Kontrollera felmeddelanden i din PHP:s "
-#~ "och/eller webbservers loggfil och konfigurera din PHP-installation "
-#~ "korrekt."
-
-#, fuzzy
-#~| msgid ""
-#~| "However on last run no data has been parsed, this usually means "
-#~| "phpMyAdmin won't be able to finish this import unless you increase php "
-#~| "time limits."
-#~ msgid ""
-#~ "However on last run no data has been parsed, this usually means "
-#~ "phpMyAdmin won"
-#~ msgstr ""
-#~ "Dock blev inga data bearbetade i senaste körningen. Detta betyder "
-#~ "vanligtvis att phpMyAdmin inte kan slutföra denna import såvida du inte "
-#~ "ökar PHP:s tidsbegränsningar."
-
-#, fuzzy
-#~| msgid "None"
-#~ msgctxt "None action"
-#~ msgid "None"
-#~ msgstr "Inget"
-
-#, fuzzy
-#~| msgid "None"
-#~ msgctxt ""
-#~ msgid "None"
-#~ msgstr "Inget"
-
-#, fuzzy
-#~| msgid "Grant all privileges on wildcard name (username\\_%)"
-#~ msgid "Grant all privileges on wildcard name (username_%)"
-#~ msgstr "Ge alla privilegier till namn med jokertecken (username\\_%)"
-
-#, fuzzy
-#~| msgid "The \"%s\" table doesn't exist!"
-#~ msgid "The %s table doesn"
-#~ msgstr "Tabellen \"%s\" finns inte!"
-
-#, fuzzy
-#~| msgid "Could not load default configuration from: \"%1$s\""
-#~ msgid "Could not load default configuration from: %1"
-#~ msgstr "Kunde inte ladda standardkonfiguration från: \"%1$s\""
-
-#, fuzzy
-#~| msgid "Invalid hostname for server %1$s. Please review your configuration."
-#~ msgid "Invalid hostname for server %1. Please review your configuration."
-#~ msgstr ""
-#~ "Ogiltigt värdnamn för server %1$s. Var god granska din konfiguration."
-
-#, fuzzy
-#~| msgid "Error renaming table %1$s to %2$s"
-#~ msgid "Error renaming table %1 to %2"
-#~ msgstr "Fel vid namnbyte på tabell %1$s till %2$s"
-
-#, fuzzy
-#~| msgid ""
-#~| "Cannot load [a@http://php.net/%1$s@Documentation][em]%1$s[/em][/a] "
-#~| "extension. Please check your PHP configuration."
-#~ msgid ""
-#~ "Cannot load [a@http://php.net/%1@Documentation][em]%1[/em][/a] extension. "
-#~ "Please check your PHP configuration."
-#~ msgstr ""
-#~ "kan inte ladda %s-tillägg,<br />var god kontrollera PHP-konfigurationen."
-
-#, fuzzy
-#~| msgid "Could not connect to MySQL server"
-#~ msgid "(or the local MySQL server"
-#~ msgstr "Kunde inte ansluta till MySQL-server"
-
-#, fuzzy
-#~| msgid ""
-#~| "There is a chance that you may have found a bug in the SQL parser. "
-#~| "Please examine your query closely, and check that the quotes are correct "
-#~| "and not mis-matched. Other possible failure causes may be that you are "
-#~| "uploading a file with binary outside of a quoted text area. You can also "
-#~| "try your query on the MySQL command line interface. The MySQL server "
-#~| "error output below, if there is any, may also help you in diagnosing the "
-#~| "problem. If you still have problems or if the parser fails where the "
-#~| "command line interface succeeds, please reduce your SQL query input to "
-#~| "the single query that causes problems, and submit a bug report with the "
-#~| "data chunk in the CUT section below:"
-#~ msgid ""
-#~ "There is a chance that you may have found a bug in the SQL parser. Please "
-#~ "examine your query closely, and check that the quotes are correct and not "
-#~ "mis-matched. Other possible failure causes may be that you are uploading "
-#~ "a file with binary outside of a quoted text area. You can also try your "
-#~ "query on the MySQL command line interface. The MySQL server error output "
-#~ "be . "
-#~ msgstr ""
-#~ "Det är möjligt att du har hittat en bugg i SQL-analysatorn. Var god "
-#~ "granska din fråga noga och kontrollera att citationstecknen är korrekta "
-#~ "och matchar varandra. En annan möjlig felorsak kan vara att du överför en "
-#~ "fil med binärkod som inte ligger inom citationstecken. Du kan även testa "
-#~ "din fråga i MySQL:s kommandoradsgränssnitt. Felmeddelandet från MySQL-"
-#~ "servern nedan, om det finns något, kan också hjälpa dig att analysera "
-#~ "problemet. Om du fortfarande har problem eller om SQL-analysatorn "
-#~ "misslyckas när kommandoradsgränssnittet lyckas, var vänlig reducera din "
-#~ "inmatning av SQL-frågor till den enda fråga som orsakar problem och "
-#~ "skicka en buggrapport med datastycket i URKLIPP-sektionen nedan:"
-
-#~ msgctxt "$strStrucCSV"
-#~ msgid "CSV"
-#~ msgstr "CSV"
-
-#~ msgid "Copy"
-#~ msgstr "Kopiera"
-
-#~ msgid "Delete the users and reload the privileges afterwards."
-#~ msgstr "Ta bort användarna och ladda om privilegierna efteråt."
-
-#~ msgid ""
-#~ "This is the cleanest way, but reloading the privileges may take a while."
-#~ msgstr ""
-#~ "Detta är det renaste sättet, men omladdning av privilegierna kan ta en "
-#~ "stund."
-
-#~ msgid "has been altered."
-#~ msgstr "har ändrats."
-
-#~ msgid "Microsoft Excel 2000"
-#~ msgstr "Microsoft Excel 2000"
-
-#~ msgid "Internet Explorer does not support this function."
-#~ msgstr "Internet Explorer saknar stöd för denna funktion."
-
-#~ msgid ""
-#~ "The &quot;deleted&quot; users will still be able to access the server as "
-#~ "usual until the privileges are reloaded."
-#~ msgstr ""
-#~ "De &quot;borttagna&quot; användarna kommer fortfarande kunna komma åt "
-#~ "servern som vanligt tills privilegierna laddas om."
-
-#~ msgid "Just delete the users from the privilege tables."
-#~ msgstr "Ta endast bort användarna från privilegiumtabellerna."
-
-#~ msgid ""
-#~ "Allows running stored procedures; has no effect in this MySQL version."
-#~ msgstr ""
-#~ "Tillåter körning av lagrade procedurer; Har ingen verkan i denna MySQL-"
-#~ "version."
-
-#~ msgid "Process list"
-#~ msgstr "Processlista"
-
-#~ msgid "Reload privileges"
-#~ msgstr "Ladda om privilegier"
-
-#~ msgid ""
-#~ "The users will still have the USAGE privilege until the privileges are "
-#~ "reloaded."
-#~ msgstr ""
-#~ "Användarna kommer fortfarande ha kvar privilegiet USAGE tills "
-#~ "privilegierna laddas om."
-
-#~ msgid "Native MS Excel format"
-#~ msgstr "Naturlig MS Excel-data"
-
-#, fuzzy
-#~| msgid "Select All"
-#~ msgctxt "Create SELECT * query"
-#~ msgid "Select all"
-#~ msgstr "Markera alla"
-
-#, fuzzy
-#~| msgid "Select All"
-#~ msgctxt "Create SELECT ... query"
-#~ msgid "Select"
-#~ msgstr "Markera alla"
-
-#, fuzzy
-#~| msgid "Insert"
-#~ msgctxt "Create INSERT query"
-#~ msgid "Insert"
-#~ msgstr "Lägg till"
-
-#, fuzzy
-#~| msgid "Update Query"
-#~ msgctxt "Create UPDATE query"
-#~ msgid "Update"
-#~ msgstr "Uppdatera fråga"
-
-#, fuzzy
-#~| msgid "Delete"
-#~ msgctxt "Create DELETE query"
-#~ msgid "Delete"
-#~ msgstr "Radera"
-
-#~ msgid "%1$d row(s) affected."
-#~ msgstr "%1$d rad(er) påverkade."
-
-#~ msgid "utf-8"
-#~ msgstr "utf-8"
-
-#~ msgid "Jan0"
-#~ msgstr "januari0"
-
-#~ msgid "Jan1"
-#~ msgstr "januari1"
-
-#~ msgid "Jan2"
-#~ msgstr "januari2"
