Translation update done using Pootle.

--- a/po/sv.po
+++ b/po/sv.po
@@ -2845,10 +2845,9 @@ msgid "(continued)"
 msgstr "(fortsättning)"
 
 #: libraries/export/latex.php:15
-#, fuzzy
 #| msgid "Structure of table __TABLE__"
 msgid "Structure of table @TABLE@"
-msgstr "Struktur för tabell __TABLE__"
+msgstr "Struktur för tabell @TABLE@"
 
 #: libraries/export/latex.php:26
 msgid "LaTeX"
