Translation update done using Pootle.

--- a/po/gl.po
+++ b/po/gl.po
@@ -4,14 +4,15 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-21 10:29+0200\n"
-"PO-Revision-Date: 2010-03-12 09:14+0100\n"
-"Last-Translator: Automatically generated\n"
+"PO-Revision-Date: 2010-07-21 14:50+0200\n"
+"Last-Translator: Marc Delisle <marc@infomarc.info>\n"
 "Language-Team: galician <gl@li.org>\n"
-"Language: \n"
+"Language: gl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Translate Toolkit 1.5.3\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Pootle 2.0.1\n"
 
 #: browse_foreigners.php:37 browse_foreigners.php:58
 #: libraries/display_tbl.lib.php:416 server_privileges.php:1506
@@ -2848,10 +2849,9 @@ msgid "Table structure for table"
 msgstr "Estrutura da táboa"
 
 #: libraries/export/latex.php:13
-#, fuzzy
 #| msgid "Content of table __TABLE__"
 msgid "Content of table @TABLE@"
-msgstr "Contido da táboa __TABLE__"
+msgstr "Contido da táboa @TABLE@"
 
 #: libraries/export/latex.php:14
 msgid "(continued)"
@@ -8690,379 +8690,3 @@ msgstr "Mudar o nome da táboa para"
 
 #~ msgid "Default character set"
 #~ msgstr "Conxunto de caracteres por omisión"
-
-#, fuzzy
-#~| msgid "Add new field"
-#~ msgid "Add field"
-#~ msgstr "Engadir un campo novo"
-
-#~ msgid "Field"
-#~ msgstr "Campo"
-
-#~ msgid "Records"
-#~ msgstr "Rexistros"
-
-#~ msgid "Fields terminated by"
-#~ msgstr "Os campos rematan por"
-
-#~ msgid "Fields"
-#~ msgstr "Campos"
-
-#~ msgid "Add %s field(s)"
-#~ msgstr "Engadir %s campo(s)"
-
-#~ msgid "Field %s has been dropped"
-#~ msgstr "Eliminouse o campo %s"
-
-#~ msgid "See image/jpeg: inline"
-#~ msgstr "Ver image/jpeg: na liña"
-
-#, fuzzy
-#~| msgid "\"zipped\""
-#~ msgid "zipped"
-#~ msgstr "comprimido no formato \"zip\""
-
-#, fuzzy
-#~| msgid "\"gzipped\""
-#~ msgid "gzipped"
-#~ msgstr "comprimido no formato \"gzip\""
-
-#, fuzzy
-#~| msgid "\"bzipped\""
-#~ msgid "bzipped"
-#~ msgstr "comprimido no formato \"bzip\""
-
-#, fuzzy
-#~| msgid "Add custom comment into header (\\n splits lines)"
-#~ msgid ""
-#~ "Add custom comment into header (\n"
-#~ " splits lines)"
-#~ msgstr "Engadir un comentario propio no cabezallo (\\n liñas diferentes)"
-
-#~ msgid "and"
-#~ msgstr "e"
-
-#, fuzzy
-#~ msgctxt "$strBLOBRepositoryDisabled"
-#~ msgid "Disabled"
-#~ msgstr "Desactivado"
-
-#, fuzzy
-#~ msgctxt "$strBLOBRepositoryEnabled"
-#~ msgid "Enabled"
-#~ msgstr "Activado"
-
-#, fuzzy
-#~ msgctxt "$strBLOBRepositoryRepair"
-#~ msgid "Repair"
-#~ msgstr "Reparar"
-
-#~ msgid "Calendar"
-#~ msgstr "Calendario"
-
-#~ msgid "MySQL&nbsp;4.0 compatible"
-#~ msgstr "Compatíbel co MySQL&nbsp;4.0"
-
-#~ msgid "Could not load default configuration from: \"%1$s\""
-#~ msgstr "Non se puido cargar a configuración desde: \"%1$s\""
-
-#~ msgid "Create an index on&nbsp;%s&nbsp;columns"
-#~ msgstr "Crear un índice en&nbsp;%s&nbsp;colunas"
-
-#, fuzzy
-#~ msgctxt "$strCreateTableShort"
-#~ msgid "Create table"
-#~ msgstr "Crear táboas"
-
-#, fuzzy
-#~ msgctxt "$strCreateUserDatabaseNone"
-#~ msgid "None"
-#~ msgstr "Ningunha"
-
-#~ msgid "Flush the table (\"FLUSH\")"
-#~ msgstr "Fechar a táboa (\"FLUSH\")"
-
-#~ msgid "Invalid server index: \"%s\""
-#~ msgstr "O índice do servidor non é válido: \"%s\""
-
-#~ msgctxt "$strMIME_description"
-#~ msgid "Description"
-#~ msgstr "Descrición"
-
-#~ msgctxt "$strNoneDefault"
-#~ msgid "None"
-#~ msgstr "Ningún"
-
-#~ msgid "Schema of the \"%s\" database - Page %s"
-#~ msgstr "Esquema da base de datos \"%s\" - Páxina %s"
-
-#~ msgid "The \"%s\" table doesn't exist!"
-#~ msgstr "Non existe a táboa \"%s\"."
-
-#~ msgid ""
-#~ "This MySQL server works as %s in <b>replication</b> process. For further "
-#~ "information about replication status on the server, please visit the <a "
-#~ "href=\"#replication\">replication section</a>."
-#~ msgstr ""
-#~ "Este servidor de MySQL server funciona como %s en proceso de "
-#~ "<b>replicación</b>. Para máis información acerca do estado de replicación "
-#~ "do servidor visite a <a href=\"#replication\">sección sobre replicación</"
-#~ "a>."
-
-#~ msgid "running on %s"
-#~ msgstr "en execución no servidor %s"
-
-#~ msgid "The scale factor is too small to fit the schema on one page"
-#~ msgstr ""
-#~ "O factor de redución é demasiado pequeno para que o esquema caiba nunha "
-#~ "única páxina"
-
-#~ msgid ""
-#~ "Cannot start session without errors, please check errors given in your "
-#~ "PHP and/or webserver log file and configure your PHP installation "
-#~ "properly."
-#~ msgstr ""
-#~ "Non se pode iniciar sesión con erros. Comprobe os erros que aparecen no "
-#~ "ficheiro de rexistro do seu servidor de PHP ou web e configure a súa "
-#~ "instalación PHP adecuadamente."
-
-#, fuzzy
-#~| msgid "Import currencies ($5.00 to 5.00)"
-#~ msgid "Import currencies (.00 to 5.00)"
-#~ msgstr "Importar as moedas ($5.00 a 5.00)"
-
-#, fuzzy
-#~| msgid ""
-#~| "However on last run no data has been parsed, this usually means "
-#~| "phpMyAdmin won't be able to finish this import unless you increase php "
-#~| "time limits."
-#~ msgid ""
-#~ "However on last run no data has been parsed, this usually means "
-#~ "phpMyAdmin won"
-#~ msgstr ""
-#~ "Porén, na última executación non se examinou nada de datos, o que "
-#~ "normalmente significa que o phpMyAdmin non poderá rematar esta "
-#~ "importación a non ser que lle incrementen os limites de tempo de php."
-
-#, fuzzy
-#~| msgid "None"
-#~ msgctxt "None action"
-#~ msgid "None"
-#~ msgstr "Ningunha"
-
-#, fuzzy
-#~| msgid "None"
-#~ msgctxt ""
-#~ msgid "None"
-#~ msgstr "Ningunha"
-
-#, fuzzy
-#~| msgid "Grant all privileges on wildcard name (username\\_%)"
-#~ msgid "Grant all privileges on wildcard name (username_%)"
-#~ msgstr ""
-#~ "Conceder todos os privilexios para o nome con comodíns (username\\_%)"
-
-#, fuzzy
-#~| msgid "The \"%s\" table doesn't exist!"
-#~ msgid "The %s table doesn"
-#~ msgstr "Non existe a táboa \"%s\"."
-
-#, fuzzy
-#~| msgid "Could not load default configuration from: \"%1$s\""
-#~ msgid "Could not load default configuration from: %1"
-#~ msgstr "Non se puido cargar a configuración desde: \"%1$s\""
-
-#, fuzzy
-#~| msgid "Invalid hostname for server %1$s. Please review your configuration."
-#~ msgid "Invalid hostname for server %1. Please review your configuration."
-#~ msgstr ""
-#~ "O nome de servidor non é válido para o servidor %1$s. Revise a "
-#~ "configuración."
-
-#, fuzzy
-#~| msgid "Error renaming table %1$s to %2$s"
-#~ msgid "Error renaming table %1 to %2"
-#~ msgstr "Houbo un erro ao mudarlle o nome á táboa %1$s para %2$s"
-
-#, fuzzy
-#~| msgid ""
-#~| "Cannot load [a@http://php.net/%1$s@Documentation][em]%1$s[/em][/a] "
-#~| "extension. Please check your PHP configuration."
-#~ msgid ""
-#~ "Cannot load [a@http://php.net/%1@Documentation][em]%1[/em][/a] extension. "
-#~ "Please check your PHP configuration."
-#~ msgstr ""
-#~ "Non se pode cargar o engadido %s.<br />Verifique a configuración do PHP."
-
-#, fuzzy
-#~| msgid ""
-#~| "This server is not configured as master in a replication process. Would "
-#~| "you like to <a href=\"%s\">configure</a> it?"
-#~ msgid ""
-#~ "This server is not configured as master in a replication process. Would "
-#~ "you like to <a href=%s>configure</a> it?"
-#~ msgstr ""
-#~ "Este servidor non está configurado como principal nun proceso de "
-#~ "replicación. Desexa <a href=\"%s\">configuralo</a>?"
-
-#, fuzzy
-#~| msgid ""
-#~| "This server is not configured as slave in a replication process. Would "
-#~| "you like to <a href=\"%s\">configure</a> it?"
-#~ msgid ""
-#~ "This server is not configured as slave in a replication process. Would "
-#~ "you like to <a href=%s>configure</a> it?"
-#~ msgstr ""
-#~ "Este servidor non está configurado como escravo nun proceso de "
-#~ "replicación. Desexa <a href=\"%s\">configuralo</a>?"
-
-#, fuzzy
-#~| msgid "Could not connect to MySQL server"
-#~ msgid "(or the local MySQL server"
-#~ msgstr "Non se puido conectar co servidor de MySQL"
-
-#, fuzzy
-#~| msgid ""
-#~| "There is a chance that you may have found a bug in the SQL parser. "
-#~| "Please examine your query closely, and check that the quotes are correct "
-#~| "and not mis-matched. Other possible failure causes may be that you are "
-#~| "uploading a file with binary outside of a quoted text area. You can also "
-#~| "try your query on the MySQL command line interface. The MySQL server "
-#~| "error output below, if there is any, may also help you in diagnosing the "
-#~| "problem. If you still have problems or if the parser fails where the "
-#~| "command line interface succeeds, please reduce your SQL query input to "
-#~| "the single query that causes problems, and submit a bug report with the "
-#~| "data chunk in the CUT section below:"
-#~ msgid ""
-#~ "There is a chance that you may have found a bug in the SQL parser. Please "
-#~ "examine your query closely, and check that the quotes are correct and not "
-#~ "mis-matched. Other possible failure causes may be that you are uploading "
-#~ "a file with binary outside of a quoted text area. You can also try your "
-#~ "query on the MySQL command line interface. The MySQL server error output "
-#~ "be . "
-#~ msgstr ""
-#~ "Cabe a posibilidade de que atopase un erro no procesador de SQL. Examine "
-#~ "a súa pesquisa con atención e comprobe que as aspas son correctas e que "
-#~ "cada unha ten o seu par. Outras causas posíbeis serían que tentase enviar "
-#~ "un ficheiro cun binario fóra dunha área de texto entre aspas. Tamén pode "
-#~ "tentar facer a súa pesquisa na liña de ordes do MySQL. A mensaxe de erro "
-#~ "que lle envía o servidor de MySQL, e que aparece máis abaixo (de habela), "
-#~ "tamén o pode axudar a diagnosticar o problema. De persistiren os erros ou "
-#~ "se o procesador fallar cando mesmo a liña de ordes vai ben, reduza o "
-#~ "texto da pesquisa à parte concreta que produce o erro e envíe unha "
-#~ "mensaxe de erro co texto da sección RECORTE que aparece a continuación:"
-
-#~ msgctxt "$strStrucCSV"
-#~ msgid "CSV"
-#~ msgstr "Datos CSV"
-
-#~ msgid "Copy"
-#~ msgstr "Copiar"
-
-#~ msgid "Delete the users and reload the privileges afterwards."
-#~ msgstr "Eliminar os usuarios e recargar os privilexios a continuación."
-
-#~ msgid ""
-#~ "This is the cleanest way, but reloading the privileges may take a while."
-#~ msgstr ""
-#~ "Este é o modo máis limpo, mais pode que recargar os privilexios leve un "
-#~ "pouco de tempo."
-
-#~ msgid "has been altered."
-#~ msgstr "foi alterado."
-
-#~ msgid "Microsoft Excel 2000"
-#~ msgstr "Microsoft Excel 2000"
-
-#~ msgid "Internet Explorer does not support this function."
-#~ msgstr "Internet Explorer non permite esta función."
-
-#~ msgid ""
-#~ "The &quot;deleted&quot; users will still be able to access the server as "
-#~ "usual until the privileges are reloaded."
-#~ msgstr ""
-#~ "Os usuarios &quot;eliminados&quot; poderán aínda acceder ao servidor como "
-#~ "sempre atá que se recarguen os privilexios."
-
-#~ msgid "Just delete the users from the privilege tables."
-#~ msgstr "Elimine só os usuarios das táboas de privilexios."
-
-#~ msgid ""
-#~ "Allows running stored procedures; has no effect in this MySQL version."
-#~ msgstr ""
-#~ "Permite executar procedementos almacenados. Non funciona nesta versión do "
-#~ "MySQL."
-
-#~ msgid "Process list"
-#~ msgstr "Listaxe dos procesos"
-
-#~ msgid "Reload privileges"
-#~ msgstr "Volver a cargar os privilexios"
-
-#~ msgid ""
-#~ "The users will still have the USAGE privilege until the privileges are "
-#~ "reloaded."
-#~ msgstr ""
-#~ "Os usuarios terán aínda o privilexio USAGE até que se recarguen os "
-#~ "privilexios."
-
-#~ msgid "Native MS Excel format"
-#~ msgstr "Datos nativos de MS Excel"
-
-#~ msgid "Alter index(s)"
-#~ msgstr "Alterar índice(s)"
-
-#~ msgid "Tracking Mechanism"
-#~ msgstr "Mecanismo de seguemento"
-
-#, fuzzy
-#~| msgid "Select All"
-#~ msgctxt "Create SELECT * query"
-#~ msgid "Select all"
-#~ msgstr "Seleccionar todo"
-
-#, fuzzy
-#~| msgid "Select All"
-#~ msgctxt "Create SELECT ... query"
-#~ msgid "Select"
-#~ msgstr "Seleccionar todo"
-
-#, fuzzy
-#~| msgid "Insert"
-#~ msgctxt "Create INSERT query"
-#~ msgid "Insert"
-#~ msgstr "Inserir"
-
-#, fuzzy
-#~| msgid "Updated"
-#~ msgctxt "Create UPDATE query"
-#~ msgid "Update"
-#~ msgstr "Actualizada"
-
-#, fuzzy
-#~| msgid "Delete"
-#~ msgctxt "Create DELETE query"
-#~ msgid "Delete"
-#~ msgstr "Eliminar"
-
-#~ msgid "%1$d row(s) affected."
-#~ msgstr "%1$d fileira(s) afectada(s)."
-
-#~ msgid "utf-8"
-#~ msgstr "utf-8"
-
-#~ msgid "Jan0"
-#~ msgstr "Xan0"
-
-#~ msgid "Jan1"
-#~ msgstr "Xan1"
-
-#~ msgid "Jan2"
-#~ msgstr "Xan2"
-
-#~ msgid ""
-#~ "Structure Difference' ;\n"
-#~ "$strStructureForView = 'Structure for view"
-#~ msgstr ""
-#~ "Diferenza da estrutura' ;\n"
-#~ "$strStructure = 'Estrutura"
